--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -284,7 +284,7 @@ jobs:
       run: |
         sudo apt update
         sudo apt install make swig
-        make -C tools/swig/test
+        make -C tools/swig/test test
 
   array_api_tests:
     needs: [smoke_test]
